feat: add mouse-over and clear-btn feature

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="h1-div"></div>
     <div class="button-div">
-            <button>
+            <button class="choose-color">
                 Choose a color
             </button>
-              <button>
+              <button class="clear-btn">
                 Clear All
             </button>
            
