--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="styles.css" ></link>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="Images/image.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
     <div class="h1-div"></div>
+    <div class="container">
     <div class="button-div">
-            <button class="choose-color">
-                Choose a color
-            </button>
-              <button class="clear-btn">
-                Clear All
-            </button>
-           
+        <label for="grid-number" class="grid-number" >Choose the number of grid:</label>
+          <input class="grid-number" type="number" min="1" max="100"/>
+            <label for="color-picker" class="color-picker">
+                Choose a color :</label>
+            <input type="color" class="color-picker-input">
+            <button class="rainbow-picker-input">Rainbow Mode</button>
+            <button class="clear-btn">Clear</button>
         </div>
-    <div id="container-div">
-        
+    <div id="container-div"></div>
     </div>
     <script src="main.js"></script>
 </body>
