--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 </head>
 <body>
     <div class="h1-div"></div>
-    <div class="container">
-    <div class="button-div">
-        <label for="grid-number" class="grid-number" >Choose the number of grid:</label>
-          <input class="grid-number" type="number" min="1" max="100"/>
-            <label for="color-picker" class="color-picker">
-                Choose a color :</label>
+     <div class="container">
+       <div class="button-div">
+            <label for="color-picker" class="color-picker">Choose a color :</label>
             <input type="color" class="color-picker-input">
             <button class="rainbow-picker-input">Rainbow Mode</button>
+          <div class="grid-slider-div">
+            <label for="gridSlider">Grid Size: </label>
+            <input type="range" class="grid-size-slider" min="1" max="100" value="16">
+            <span class="grid-size-display">16 x 16</span>
+          </div>
             <button class="clear-btn">Clear</button>
         </div>
     <div id="container-div"></div>
