style: modify UI

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <div class="h1-div"></div>
      <div class="container">
        <div class="button-div">
-            <label for="color-picker" class="color-picker">Choose a color :</label>
-            <input type="color" class="color-picker-input">
+        <div class="color-div">
+            <label for="color-picker" class="color-picker">Choose a color:</label>
+            <input type="color" class="color-picker-input" placeholder="Random color">
             <button class="rainbow-picker-input">Rainbow Mode</button>
+        </div>
           <div class="grid-slider-div">
             <label for="gridSlider">Grid Size: </label>
-            <input type="range" class="grid-size-slider" min="1" max="100" value="16">
+            <input type="range" class="grid-size-slider" min="1" max="64" value="16">
             <span class="grid-size-display">16 x 16</span>
           </div>
             <button class="clear-btn">Clear</button>
